[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Ship_3_Panel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Ship_Broken.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ship_1_Panel.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ship_2_Panel.png" type="Texture" id=4]
[ext_resource path="res://Ship.gd" type="Script" id=5]
[ext_resource path="res://Assets/JetParticle.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.5, 18 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.996591 ), 0.0, 0.0, 0, 0, Vector2( 0.618812, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0147727 ), 0.0, 0.0, 0, 0 ]

[node name="Ship" type="Node2D"]
scale = Vector2( 2, 2 )
z_index = -30
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )

[node name="ShipPieces" type="Position2D" parent="."]

[node name="Panel" type="Sprite" parent="ShipPieces"]
visible = false
position = Vector2( -24, 12 )
texture = ExtResource( 3 )

[node name="BackPanel" type="Sprite" parent="ShipPieces"]
visible = false
position = Vector2( -48, -12 )
z_index = -1
texture = ExtResource( 4 )

[node name="Thruster" type="Sprite" parent="ShipPieces"]
visible = false
position = Vector2( -32, -5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["ship"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 6 )
shape = SubResource( 1 )

[node name="ThrusterParticles" type="CPUParticles2D" parent="."]
position = Vector2( -43.5, -7 )
scale = Vector2( 0.05, 0.05 )
z_index = -1
emitting = false
amount = 20
speed_scale = 2.0
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 10, 75 )
direction = Vector2( -200, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 800.0
scale_amount = 12.0
scale_amount_random = 0.5
scale_amount_curve = SubResource( 3 )
color = Color( 0.945098, 0.94902, 0.854902, 1 )

[node name="NextLevelTimer" type="Timer" parent="."]

[connection signal="timeout" from="NextLevelTimer" to="." method="_on_NextLevelTimer_timeout"]
